# genbot

./: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
bot/: cli.py  config.py  main.py
bot/db/: database.py
bot/handlers/: ask.py  audit.py  call.py  contracts.py  deploy.py  faucet.py  guide.py  network.py  password.py  schema.py  start.py  template.py  tx.py  validators.py
bot/models/: contract.py  user.py
bot/services/: audit_service.py  contract_registry.py  genlayer_rpc.py  template_service.py  wallet_service.py
bot/templates/: escrow.py  prediction_market.py  token_manager.py  voting_dao.py
bot/utils/: code_validator.py  encryption.py  formatting.py
